WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94589
[EFL] Some public API functions don't have their symbols exported
https://bugs.webkit.org/show_bug.cgi?id=94589
Summary
[EFL] Some public API functions don't have their symbols exported
Thiago Marcos P. Santos
Reported
2012-08-21 05:22:49 PDT
Causes linking errors like: Linking CXX executable ../../bin/test_ewk2_context ../../lib/libewk2UnitTestUtils.a(EWK2UnitTestBase.cpp.o): In function `EWK2UnitTest::EWK2UnitTestBase::SetUp()': EWK2UnitTestBase.cpp:(.text+0xef): undefined reference to `ewk_view_smart_add' collect2: ld returned 1 exit status make[2]: *** [bin/test_ewk2_context] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/test_ewk2_context.dir/all] Error 2 makeFailed to run "['Tools/Scripts/build-webkit', '--release', '--efl', '--update-efl', '--makeargs="-j4"']" exit_code: 2
Attachments
Patch
(1.80 KB, patch)
2012-08-21 05:32 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-08-21 05:32:38 PDT
Created
attachment 159664
[details]
Patch
Thiago Marcos P. Santos
Comment 2
2012-08-21 12:39:25 PDT
Commit queue is not taking this patch. :(
WebKit Review Bot
Comment 3
2012-08-21 16:14:06 PDT
Comment on
attachment 159664
[details]
Patch Clearing flags on attachment: 159664 Committed
r126207
: <
http://trac.webkit.org/changeset/126207
>
WebKit Review Bot
Comment 4
2012-08-21 16:14:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug