[EFL] Some public API functions don't have their symbols exported https://bugs.webkit.org/show_bug.cgi?id=94589

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-08-21
Reviewed by Kenneth Rohde Christiansen.

Added missing export symbol macro to these public API functions.

* UIProcess/API/efl/ewk_view.h:

Canonical link: https://commits.webkit.org/112443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126207 268f45cc-cd09-0410-ab3c-d52691b4dbfc